Fix logo not showing on loginscreen

--- a/app/src/main/assets/view/login/login.css
+++ b/app/src/main/assets/view/login/login.css
@@ -108,6 +108,7 @@ html {
     bottom: .5vw;
     right: .5vw;
     opacity: .5;
+    z-index:5;
 }
 .flexhold{
     display: flex;
